--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "grunt-contrib-yuidoc": "~0.5.2",
     "grunt-contrib": "~0.11.0",
     "grunt-http-server": "0.0.5",
+    "grunt-exec": "~0.4.3",
     "underscore": "~1.6.0"
   }
 }
