--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "lang-flashcards ===============",
   "main": "index.js",
+  "bundle": "lang-flashcards",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
