--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lang-flashcards",
-  "version": "0.0.0",
-  "description": "lang-flashcards ===============",
+  "version": "1.1.1",
+  "description": "lang-flashcards",
   "main": "index.js",
   "bundle": "lang-flashcards",
   "scripts": {
