--- a/package.json
+++ b/package.json
@@ -18,35 +18,26 @@
   },
   "homepage": "https://github.com/iuriikyian/lang-flashcards",
   "devDependencies": {
-    "grunt-contrib-symlink": "~0.3.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-compass": "~0.7.2",
-    "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-clean": "~0.5.0",
+    "backbone": "^1.2.3",
+    "grunt": "*",
+    "grunt-browserify": "^4.0.1",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-compass": "~1.0.3",
+    "grunt-contrib-compress": "~0.14.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-connect": "~0.11.2",
+    "grunt-contrib-copy": "~0.8.1",
+    "grunt-contrib-csslint": "~0.5.0",
     "grunt-contrib-htmlmin": "~0.2.0",
-    "grunt-contrib-sass": "~0.7.3",
-    "grunt-contrib-coffee": "~0.10.1",
-    "grunt-contrib-csslint": "~0.2.0",
-    "grunt-contrib-jst": "~0.6.0",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-qunit": "~0.4.0",
-    "grunt-contrib-handlebars": "~0.8.0",
-    "grunt-contrib-requirejs": "~0.4.4",
-    "grunt-contrib-stylus": "~0.15.1",
-    "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-jade": "~0.11.0",
-    "grunt-contrib-compress": "~0.8.0",
-    "grunt-contrib-nodeunit": "~0.3.3",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-jasmine": "~0.6.5",
-    "grunt-contrib-less": "~0.11.3",
     "grunt-contrib-imagemin": "~0.7.1",
-    "grunt-contrib-yuidoc": "~0.5.2",
-    "grunt-contrib": "~0.11.0",
+    "grunt-contrib-jasmine": "~0.6.5",
+    "grunt-contrib-jshint": "~1.0.0",
+    "grunt-contrib-jst": "~0.6.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-exec": "~0.4.6",
     "grunt-http-server": "0.0.5",
-    "grunt-exec": "~0.4.3",
-    "underscore": "~1.6.0"
+    "hammerjs": "^2.0.6",
+    "jquery": "^2.2.0",
+    "underscore": "^1.8.3"
   }
 }
